[package]
name = "lightrag-private"
version.workspace = true
edition.workspace = true
license.workspace = true

# Rust port of LightRAG's retrieval pipeline over the encrypted store. See
# `docs/prototype/private-graph-rag-variant-a.md` §4.5 (surface) and §7 M7
# (retrieval port milestone). M0 ships a skeleton only.

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rag_core = { path = "../core", package = "core" }
gelo-protocol = { path = "../gelo-protocol" }
hmac.workspace = true
light-kg-store = { path = "../light-kg-store" }
rand.workspace = true
ring-oram = { path = "../ring-oram" }
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
xormm-emm = { path = "../xormm-emm" }
zeroize.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rand = { workspace = true }
rand_chacha = { workspace = true }
