[package]
name = "remote-rag"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dp-forward = { workspace = true }
# Hand-rolled Paillier on num-bigint (see `src/paillier.rs` for rationale).
# We considered fast-paillier 0.3.2 but its dependency on glass_pumpkin 1.9
# (yanked transitive `core2 0.4`) and 1.10 (incompatible rand_core API)
# both fail to build in 2026-Q2 toolchains. ~250 LoC pure-Rust replacement
# is easier than carrying the patch tree.
num-bigint = { workspace = true, features = ["rand"] }
num-traits = { workspace = true }
num-integer = { workspace = true }
num-prime = { workspace = true }
rayon = { workspace = true }
# num-prime 0.5 still targets rand 0.8 (its `RandPrime` trait blanket-impls
# on `rand_0_8::Rng`). Bring it in as `rand08` so we don't conflict with
# the workspace rand 0.9; used only inside `paillier::keygen`.
rand08 = { package = "rand", version = "0.8" }
rag_core = { path = "../core", package = "core" }
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true

[dev-dependencies]
