[package]
name = "xormm-emm"
version.workspace = true
edition.workspace = true
license.workspace = true

# XorMM volume-hiding encrypted multi-map. See
# `docs/prototype/private-graph-rag-variant-a.md` §4.3 (surface) and §7 M2
# (correctness milestone). M0 ships a skeleton only.

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true
